--- a/style.css
+++ b/style.css
@@ -2,23 +2,21 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family:Lato, sans-serif;
+    font-family: "Rubik", sans-serif;
     line-height: 150%;
     
-
     /* border: 3px black solid; */
 }
 /* .header *{
     border: 3px black solid;
 } */
-ul{
+ul {
     display: flex;
     text-decoration: none;
     list-style-type: none;
     gap: 24px;
     flex-wrap: wrap;
     /* overflow:auto; */
-    
 }
 
 .header {
@@ -26,83 +24,60 @@ ul{
     color: white;
     flex-direction: column;
     display: flex;
-    height: 100vh;
 }
-.header-bar{
+.header-bar {
     display: flex;
     justify-content: space-between;
     margin-left: 300px;
     margin-right: 300px;
-    margin-top: 24px; 
-    margin-bottom: 24px;   
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
-.header-bar *{
+.header-bar * {
     align-items: center;
 }
-.header-logo{
+.header-bar-logo {
     display: flex;
     font-size: 24px;
     font-weight: bold;
-    color: #F9FAF8;
+    color: #f9faf8;
     flex-direction: row;
     text-align: center;
     font-style: italic;
-    
 }
-.header-nav-links{
-    color: #E5E7EB;
-    font-size: 18px;
-    
-}
-.header-logo img {
-    width: 48px;
-    
-}
-.header-hero-content{
-    flex-basis: 40%;
-    
 
+.header-bar-logo img {
+    width: 48px;
 }
-.header-hero-content h1{
-    font-size: 48px;
-    font-weight:900;
-    
-    
-}
-.header-hero-content p{
+.header-bar-nav {
+    color: #e5e7eb;
     font-size: 18px;
-    color: #E5E7EB;
-    
 }
-.header-hero{
+
+.header-hero {
     display: flex;
     justify-content: space-between;
-    
-    margin: 150px 300px 150px 300px;
-    gap: 24px;
+
+    margin: 100px 300px 100px 300px;
 }
-.header-hero-image{
-    background-color: grey;
-    flex-basis: 40%;
-    display: flex;
-    
-}
-.header-hero-content{
+.header-hero-content {
+    flex-basis: 60%;
     display: flex;
     flex-direction: column;
     gap: 16px;
     justify-content: center;
     align-items: flex-start;
+    text-align: justify;
 }
-.header-hero-image img{
-    
-    
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    
+.header-hero-content h1 {
+    font-size: 48px;
+    font-weight: 700;
 }
-button{
+.header-hero-content p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+.header-hero-content-button {
     background-color: #3882f6;
     color: white;
     border: 0;
@@ -110,14 +85,169 @@ button{
     border-radius: 8px;
     font-weight: 900;
     font-size: 18px;
-
 }
-@media (max-width: 800px) {
-    .header-hero-image {
-        flex-basis: 100%; /* Each item takes full width below 800px */
-    }
 
-    .header-hero-image img {
-        width: 100%; /* Ensure the image takes full width of its container */
-    }
+.header-hero-image-container {
+    background-color: #1f2937;
+    flex-basis: 30%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.header-hero-image {
+    max-width: 100%;
+    height: auto;
+    display: flex;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    height: 2400px;
+}
+.main-section-1 {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+
+    gap: 72px;
+}
+.boxes {
+    display: flex;
+    justify-content: center;
+    gap: 72px;
+    width: 65%;
+}
+.whatido {
+    color: #1f2937;
+    font-size: 48px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.box-content {
+    display: flex;
+    font-weight: 300;
+    font-size: 18px;
+    margin-top: 8px;
+}
+.boxes .box {
+    color: #1f2937;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    text-align: center;
+    align-items: center;
+    width: 100%;
+}
+.box-image {
+    display: flex;
+    flex-direction: column;
+    border: #3882f6 solid 3px;
+    border-radius: 24px;
+}
+.box-image img {
+    border-radius: 24px;
+}
+.box-header {
+    font-size: 24px;
+    display: flex;
+    height: 80px;
+    align-items: center;
+    font-weight: 500;
+    margin-bottom: 36px;
+}
+.main-section {
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+    justify-content: center;
+}
+.main-section-2 {
+    background-color: #d9dee7;
+}
+
+.about-container {
+    display: flex;
+    align-items: stretch;
+    flex-basis: 65%;
+    justify-content: space-between;
+    gap: 48px;
+    text-align: justify;
+}
+.about {
+    display: flex;
+
+    align-items: center;
+}
+.about-header {
+    font-size: 72px;
+    justify-content: space-between;
+}
+.about-content {
+    flex-basis: 60%;
+    font-size: 24px;
+    justify-content: center;
+    flex-direction: column;
+    text-indent: 50px;
+    gap: 48px;
+}
+.main-section-3 {
+    align-items: center;
+}
+.cta-container {
+    box-sizing:content-box;
+    display: flex;
+    align-items: center;
+    flex-basis: 65%;
+    justify-content: center;
+    gap: 48px;
+    background-color: #3882f6;
+    color: white;
+    padding: 64px 120px 64px 120px;
+    border-radius: 10px;
+}
+.cta-button {
+    background-color: #3882f6;
+    color: white;
+    border: 0;
+    padding: 16px 24px 16px 24px;
+
+    font-weight: 700;
+    font-size: 18px;
+    flex-grow: 1;
+    border-radius: 10px;
+    border: white 4px solid;
+}
+.cta-content-container {
+    display: flex;
+    flex-direction: column;
+}
+.cta-content-text-1 {
+    display: flex;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: italic;
+}
+.cta-content-text-2 {
+    display: flex;
+    font-size: 18px;
+    font-weight: 200;
+}
+.cta-button-container {
+    display: flex;
+
+    flex-basis: 25%;
+}
+.footer{
+    display: flex;
+    background-color: #1f2937;
+    color: white;
+    justify-content: center;
+    
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
 }
