--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ main {
     justify-content: center;
     gap: 72px;
     width: 65%;
+    box-sizing: border-box; 
+      
+    
 }
 .whatido {
     color: #1f2937;
@@ -145,11 +148,17 @@ main {
 .box-image {
     display: flex;
     flex-direction: column;
-    border: #3882f6 solid 3px;
+    
     border-radius: 24px;
+    
 }
 .box-image img {
     border-radius: 24px;
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+    border: #3882f6 solid 4px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .box-header {
     font-size: 24px;
