--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     font-family: "Rubik", sans-serif;
     line-height: 150%;
-    
+
     /* border: 3px black solid; */
 }
 /* .header *{
@@ -24,15 +24,24 @@ ul {
     color: white;
     flex-direction: column;
     display: flex;
+    align-items: center;
 }
 .header-bar {
     display: flex;
     justify-content: space-between;
-    margin-left: 300px;
-    margin-right: 300px;
+
     margin-top: 24px;
     margin-bottom: 24px;
+    width: 70%;
+    gap: 24px;
+    flex-wrap: wrap;
 }
+@media (max-width: 1178px) {
+    .header-bar {
+        justify-content: center;
+    }
+}
+
 .header-bar * {
     align-items: center;
 }
@@ -44,30 +53,41 @@ ul {
     flex-direction: row;
     text-align: center;
     font-style: italic;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    overflow: hidden;
 }
 
 .header-bar-logo img {
-    width: 48px;
+    width: 4vw;
+    min-width: 48px;
 }
 .header-bar-nav {
     color: #e5e7eb;
     font-size: 18px;
+    justify-content: space-evenly;
 }
 
 .header-hero {
     display: flex;
     justify-content: space-between;
-
-    margin: 100px 300px 100px 300px;
+    width: 70%;
+    margin: 4em 0;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 24px;
 }
 .header-hero-content {
-    flex-basis: 60%;
+    /* flex-basis: 60%; */
     display: flex;
     flex-direction: column;
     gap: 16px;
     justify-content: center;
     align-items: flex-start;
-    text-align: justify;
+    text-align: left;
+
+    flex-grow: 1;
+    flex-basis: 320px;
 }
 .header-hero-content h1 {
     font-size: 48px;
@@ -89,134 +109,153 @@ ul {
 
 .header-hero-image-container {
     background-color: #1f2937;
-    flex-basis: 30%;
     display: flex;
     justify-content: flex-end;
+    height: 100%;
+    min-width: 250px;
+    flex-grow: 0;
+    flex-basis: 20vw;
 }
 
 .header-hero-image {
     max-width: 100%;
-    height: auto;
     display: flex;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    height: 2400px;
+    flex-basis: 1950px;    
+}
+.main-section {
+    display: flex;
+    flex-basis: 650px;
+    flex-grow: 0;
+    flex-shrink: 0
+    ;
+    justify-content: center;
 }
 .main-section-1 {
     flex-direction: column;
     display: flex;
     align-items: center;
 
-    gap: 72px;
+    gap: 2em;
+    
 }
 .boxes {
     display: flex;
-    justify-content: center;
+
     gap: 72px;
-    width: 65%;
-    box-sizing: border-box; 
-      
-    
-}
-.whatido {
-    color: #1f2937;
-    font-size: 48px;
-    font-weight: 400;
-    text-align: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    margin-bottom: 2rem;
 }
 
+.whatido {
+    color: #1f2937;
+    font-size: 3vw;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 2rem;
+}
+.main-section-1 > div {
+    width: 70%;
+}
 .box-content {
     display: flex;
     font-weight: 300;
     font-size: 18px;
-    margin-top: 8px;
+    flex: 1;
+    max-width: 80%;
+    margin-top: 2em;
 }
+
 .boxes .box {
     color: #1f2937;
     font-weight: 400;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: center;
 
     text-align: center;
-    align-items: center;
-    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0px;
 }
 .box-image {
     display: flex;
     flex-direction: column;
-    
+
     border-radius: 24px;
-    
 }
 .box-image img {
     border-radius: 24px;
     object-fit: cover;
-    width: 200px;
-    height: 200px;
+    width: 12em;
+    height: 12em;
     border: #3882f6 solid 4px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .box-header {
     font-size: 24px;
     display: flex;
-    height: 80px;
+    flex-grow: 0;
+    flex-basis: 100px;
     align-items: center;
     font-weight: 500;
-    margin-bottom: 36px;
 }
-.main-section {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
-    justify-content: center;
-}
+
 .main-section-2 {
     background-color: #d9dee7;
 }
 
 .about-container {
+    width: 70%;
     display: flex;
-    align-items: stretch;
-    flex-basis: 65%;
+    flex-wrap: wrap;
+
     justify-content: space-between;
     gap: 48px;
     text-align: justify;
+    margin: 5rem auto;
 }
 .about {
     display: flex;
-
     align-items: center;
+    text-align: center;
 }
 .about-header {
     font-size: 72px;
-    justify-content: space-between;
+    justify-content: center;
+    flex-direction: column;
+    flex-basis: 300px;
+    flex-grow: 1;
 }
 .about-content {
-    flex-basis: 60%;
     font-size: 24px;
     justify-content: center;
     flex-direction: column;
     text-indent: 50px;
     gap: 48px;
+    flex-basis: 400px;
+    flex-grow: 4;
 }
 .main-section-3 {
     align-items: center;
 }
 .cta-container {
-    box-sizing:content-box;
+    box-sizing: content-box;
     display: flex;
     align-items: center;
-    flex-basis: 65%;
+    width: 70%;
     justify-content: center;
     gap: 48px;
     background-color: #3882f6;
     color: white;
-    padding: 64px 120px 64px 120px;
+    padding: 4vw 8vw;
     border-radius: 10px;
+    margin: 5em auto;
+    flex-wrap: wrap;
 }
 .cta-button {
     background-color: #3882f6;
@@ -233,6 +272,8 @@ main {
 .cta-content-container {
     display: flex;
     flex-direction: column;
+    flex-basis: 350px;
+    flex-grow: 3;
 }
 .cta-content-text-1 {
     display: flex;
@@ -247,16 +288,31 @@ main {
 }
 .cta-button-container {
     display: flex;
-
-    flex-basis: 25%;
+    flex-grow: 1;
+    flex-basis: 300px;
 }
-.footer{
+.footer {
     display: flex;
     background-color: #1f2937;
     color: white;
     justify-content: center;
-    
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
+
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+}
+@media (max-width: 848px) {
+    .header-hero {
+        justify-content: center;
+        align-items: center;
+        gap: 72px;
+    }
+    .header-hero-content {
+        align-items: center;
+        gap: 36px;
+        text-align: center;
+    }
+    .header-hero-image-container {
+        min-width: unset;
+        flex-basis: 70%;
+    }
 }
