--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ ul {
     color: #e5e7eb;
     font-size: 18px;
     justify-content: space-evenly;
+    overflow: hidden;
 }
 
 .header-hero {
@@ -76,6 +77,7 @@ ul {
     flex-wrap: wrap;
     align-items: center;
     gap: 24px;
+    overflow: hidden;
 }
 .header-hero-content {
     /* flex-basis: 60%; */
@@ -90,11 +92,11 @@ ul {
     flex-basis: 320px;
 }
 .header-hero-content h1 {
-    font-size: 48px;
+    font-size: calc(1.5rem + 1.5vw);
     font-weight: 700;
 }
 .header-hero-content p {
-    font-size: 18px;
+    font-size: calc(1rem + 0.2vw);
     color: #e5e7eb;
 }
 .header-hero-content-button {
@@ -104,7 +106,7 @@ ul {
     padding: 8px 24px 8px 24px;
     border-radius: 8px;
     font-weight: 900;
-    font-size: 18px;
+    font-size: calc(1rem + 0.2vw);
 }
 
 .header-hero-image-container {
@@ -125,14 +127,13 @@ ul {
 main {
     display: flex;
     flex-direction: column;
-    flex-basis: 1950px;    
+    flex-basis: auto;
 }
 .main-section {
     display: flex;
-    flex-basis: 650px;
+    flex-basis: auto;
     flex-grow: 0;
-    flex-shrink: 0
-    ;
+    flex-shrink: 0;
     justify-content: center;
 }
 .main-section-1 {
@@ -141,23 +142,23 @@ main {
     align-items: center;
 
     gap: 2em;
-    
 }
 .boxes {
     display: flex;
-
-    gap: 72px;
+    overflow: hidden;
+    /* justify-content: space-evenly; */
     flex-wrap: wrap;
     box-sizing: border-box;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
+    gap: 100px;
 }
 
 .whatido {
     color: #1f2937;
-    font-size: 3vw;
+    font-size: calc(1.7rem + 1.5vw);
     font-weight: 400;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 5rem;
 }
 .main-section-1 > div {
     width: 70%;
@@ -165,7 +166,8 @@ main {
 .box-content {
     display: flex;
     font-weight: 300;
-    font-size: 18px;
+    font-size: calc(1rem + 0.2vw);
+    font-style: italic;
     flex: 1;
     max-width: 80%;
     margin-top: 2em;
@@ -179,8 +181,8 @@ main {
     align-items: center;
 
     text-align: center;
-    flex-grow: 1;
-    flex-basis: 0px;
+
+    flex-basis: calc(25% - 75px);
 }
 .box-image {
     display: flex;
@@ -197,7 +199,7 @@ main {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .box-header {
-    font-size: 24px;
+    font-size: calc(1.2rem + 0.4vw);
     display: flex;
     flex-grow: 0;
     flex-basis: 100px;
@@ -217,25 +219,25 @@ main {
     justify-content: space-between;
     gap: 48px;
     text-align: justify;
-    margin: 5rem auto;
+    margin: 10rem auto;
 }
 .about {
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: justify;
 }
 .about-header {
-    font-size: 72px;
+    font-size: calc(2rem + 2vw);
     justify-content: center;
     flex-direction: column;
     flex-basis: 300px;
     flex-grow: 1;
 }
 .about-content {
-    font-size: 24px;
+    font-size: calc(0.9rem + 0.45vw);
     justify-content: center;
     flex-direction: column;
-    text-indent: 50px;
+
     gap: 48px;
     flex-basis: 400px;
     flex-grow: 4;
@@ -247,14 +249,15 @@ main {
     box-sizing: content-box;
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 80%;
     justify-content: center;
     gap: 48px;
     background-color: #3882f6;
     color: white;
-    padding: 4vw 8vw;
+    padding: clamp(2em, 6.7vw, 8em) clamp(0.5em, 4vw, 5em);
+    
     border-radius: 10px;
-    margin: 5em auto;
+    margin: 10em auto;
     flex-wrap: wrap;
 }
 .cta-button {
@@ -262,7 +265,7 @@ main {
     color: white;
     border: 0;
     padding: 16px 24px 16px 24px;
-
+    
     font-weight: 700;
     font-size: 18px;
     flex-grow: 1;
@@ -274,17 +277,22 @@ main {
     flex-direction: column;
     flex-basis: 350px;
     flex-grow: 3;
+    gap: 12px;
 }
 .cta-content-text-1 {
     display: flex;
-    font-size: 30px;
+    font-size: calc(1.5rem + 0.5vw);
     font-weight: 400;
     font-style: italic;
+    text-align: center;
+    justify-content: center;
 }
 .cta-content-text-2 {
     display: flex;
-    font-size: 18px;
+    font-size: calc(0.8rem + 0.4vw);
     font-weight: 200;
+    text-align: center;
+    justify-content: center;
 }
 .cta-button-container {
     display: flex;
@@ -297,8 +305,8 @@ main {
     color: white;
     justify-content: center;
 
-    padding-top: 2vw;
-    padding-bottom: 2vw;
+    padding-top: clamp(1rem, 1.667vw, 2rem);
+    padding-bottom: clamp(1rem, 1.667vw, 2rem);
 }
 @media (max-width: 848px) {
     .header-hero {
@@ -314,5 +322,22 @@ main {
     .header-hero-image-container {
         min-width: unset;
         flex-basis: 70%;
+    }
+}
+@media (max-width: 1526px) {
+    .boxes .box {
+        flex-basis: calc(33.33333% - 66.66666px);
+    }
+}
+
+@media (max-width: 1109px) {
+    .boxes .box {
+        flex-basis: calc(50% - 50px);
+    }
+}
+
+@media (max-width: 691px) {
+    .boxes .box {
+        flex-basis: calc(100%);
     }
 }
