--- a/style.css
+++ b/style.css
@@ -1,434 +1,421 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Rubik", sans-serif;
-    line-height: 150%;
-
-    /* border: 1.5px black solid; */
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	font-family: "Rubik", sans-serif;
+	line-height: 150%;
+	/* outline: 1.5px solid black; */
+	/* border: 1.5px black solid; */
 }
 /* .header *{
     border: 3px black solid;
 } */
 ul {
-    display: flex;
-    text-decoration: none;
-    list-style-type: none;
-    gap: 24px;
-    flex-wrap: wrap;
-    /* overflow:auto; */
+	display: flex;
+	text-decoration: none;
+	list-style-type: none;
+	gap: 24px;
+	flex-wrap: wrap;
+	/* overflow:auto; */
 }
 
 .header {
-    background-color: #1f2937;
-    color: white;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    
+	background-color: #1f2937;
+	color: white;
+	flex-direction: column;
+	display: flex;
+	align-items: center;
 }
 .header-bar {
-    display: flex;
-    justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 
-    margin-top: 1vw;
-    margin-bottom: 1vw;
-    width: 70%;
-    gap: 24px;
-    flex-wrap: wrap;
-    
+	margin-top: 1vw;
+	margin-bottom: 1vw;
+	width: 70%;
+	gap: 24px;
+	flex-wrap: wrap;
 }
-.sticky{
-    background-color: #1f2937;
-    color: white;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    position: sticky;
-top: 0px;
-z-index: 1000;
+.sticky {
+	background-color: #1f2937;
+	color: white;
+	flex-direction: column;
+	display: flex;
+	align-items: center;
+	position: sticky;
+	top: 0px;
+	z-index: 1000;
 }
 @media (max-width: 1178px) {
-    .header-bar {
-        justify-content: center;
-        
-    }
-    
+	.header-bar {
+		justify-content: center;
+	}
 }
 
 .header-bar * {
-    align-items: center;
+	align-items: center;
 }
 .header-bar-logo {
-    display: flex;
-    font-size: 24px;
-    font-weight: bold;
-    color: #f9faf8;
-    flex-direction: row;
-    text-align: center;
-    font-style: italic;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    overflow: hidden;
+	display: flex;
+	font-size: 24px;
+	font-weight: bold;
+	color: #f9faf8;
+	flex-direction: row;
+	text-align: center;
+	font-style: italic;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	overflow: hidden;
 }
 
 .header-bar-logo img {
-    width: 4vw;
-    min-width: 48px;
-    margin-left: -10px;
+	width: 4vw;
+	min-width: 48px;
+	margin-left: -10px;
 }
-.header-bar-nav a{
-    color: #e5e7eb;
-    font-size: 18px;
-    justify-content: space-evenly;
-    overflow: hidden;
-    text-decoration: none;
+.header-bar-nav a {
+	color: #e5e7eb;
+	font-size: 18px;
+	justify-content: space-evenly;
+	overflow: hidden;
+	text-decoration: none;
 }
 
 .header-hero {
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-    margin: 4em 0;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 24px;
-    overflow: hidden;
-    scroll-margin-top: 10em;
+	display: flex;
+	justify-content: space-between;
+	width: 70%;
+	margin: 4em 0;
+	flex-wrap: wrap;
+	align-items: center;
+	gap: 24px;
+	overflow: hidden;
+	scroll-margin-top: 10em;
 }
 .header-hero-content {
-    /* flex-basis: 60%; */
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    justify-content: center;
-    align-items: flex-start;
-    text-align: left;
+	/* flex-basis: 60%; */
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	justify-content: center;
+	align-items: flex-start;
+	text-align: left;
 
-    flex-grow: 1;
-    flex-basis: 320px;
+	flex-grow: 1;
+	flex-basis: 320px;
 }
 .header-hero-content h1 {
-    font-size: calc(1.5rem + 1.5vw);
-    font-weight: 700;
+	font-size: calc(1.5rem + 1.5vw);
+	font-weight: 700;
 }
 .header-hero-content p {
-    font-size: calc(1rem + 0.2vw);
-    color: #e5e7eb;
+	font-size: calc(1rem + 0.2vw);
+	color: #e5e7eb;
 }
 .header-hero-content-button {
-    background-color: #3882f6;
-    color: white;
-    border: 0;
-    padding: 8px 24px 8px 24px;
-    border-radius: 8px;
-    font-weight: 700;
-    font-size: calc(1rem + 0.2vw);
-    text-decoration: none;
+	background-color: #3882f6;
+	color: white;
+	border: 0;
+	padding: 8px 24px 8px 24px;
+	border-radius: 8px;
+	font-weight: 700;
+	font-size: calc(1rem + 0.2vw);
+	text-decoration: none;
 }
 
 .header-hero-image-container {
-    background-color: #1f2937;
-    display: flex;
-    justify-content: flex-end;
-    height: 100%;
-    min-width: 250px;
-    flex-grow: 0;
-    flex-basis: 20vw;
+	background-color: #1f2937;
+	display: flex;
+	justify-content: flex-end;
+	height: 100%;
+	min-width: 250px;
+	flex-grow: 0;
+	flex-basis: 20vw;
 }
 
 .header-hero-image {
-    max-width: 100%;
-    display: flex;
+	max-width: 100%;
+	display: flex;
+	border: 3px solid #3882f6;
+	border-radius: 24px;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    flex-basis: auto;
+	display: flex;
+	flex-direction: column;
+	flex-basis: auto;
 }
 .main-section {
-    display: flex;
-    flex-basis: auto;
-    flex-grow: 0;
-    flex-shrink: 0;
-    justify-content: center;
+	display: flex;
+	flex-basis: auto;
+	flex-grow: 0;
+	flex-shrink: 0;
+	justify-content: center;
 }
 .main-section-1 {
-    flex-direction: column;
-    display: flex;
-    align-items: center;
+	flex-direction: column;
+	display: flex;
+	align-items: center;
 
-    gap: 2em;
+	gap: 2em;
 }
 .boxes {
-    display: flex;
-    overflow: hidden;
-    justify-content: center;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    margin-bottom: 5rem;
-    gap: 100px;
+	display: flex;
+	overflow: hidden;
+	justify-content: center;
+	flex-wrap: wrap;
+	box-sizing: border-box;
+	margin-bottom: 5rem;
+	gap: 100px;
 }
 
 .whatido {
-    color: #1f2937;
-    font-size: calc(1.7rem + 1.5vw);
-    font-weight: 400;
-    text-align: center;
-    margin-top: 5rem;
+	color: #1f2937;
+	font-size: calc(1.7rem + 1.5vw);
+	font-weight: 400;
+	text-align: center;
+	margin-top: 5rem;
 }
 .main-section-1 > div {
-    width: 70%;
+	width: 70%;
 }
 .box-content {
-    display: flex;
-    font-weight: 300;
-    font-size: calc(1rem + 0.2vw);
-    font-style: italic;
-    flex: 1;
-    max-width: 80%;
-    margin-top: 2em;
+	display: flex;
+	font-weight: 300;
+	font-size: calc(1rem + 0.2vw);
+	font-style: italic;
+	flex: 1;
+	max-width: 80%;
+	margin-top: 2em;
 }
 
 .boxes .box {
-    color: #1f2937;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	color: #1f2937;
+	font-weight: 400;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
-    text-align: center;
+	text-align: center;
 
-    flex-basis: calc(25% - 75px);
+	flex-basis: calc(25% - 75px);
 }
 .box-image {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-    border-radius: 24px;
+	border-radius: 24px;
 }
 .box-image img {
-    border-radius: 24px;
-    object-fit: cover;
-    width: 12em;
-    height: 12em;
-    border: #3882f6 solid 4px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 24px;
+	object-fit: cover;
+	width: 12em;
+	height: 12em;
+	border: #3882f6 solid 4px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .box-header {
-    font-size: calc(1.2rem + 0.4vw);
-    display: flex;
-    flex-grow: 0;
-    flex-basis: 100px;
-    align-items: center;
-    font-weight: 500;
+	font-size: calc(1.2rem + 0.4vw);
+	display: flex;
+	flex-grow: 0;
+	flex-basis: 100px;
+	align-items: center;
+	font-weight: 500;
 }
 
 .main-section-2 {
-    background-color: #d9dee7;
+	background-color: #d9dee7;
 }
 
 .about-container {
-    width: 70%;
-    display: flex;
-    flex-wrap: wrap;
+	width: 70%;
+	display: flex;
+	flex-wrap: wrap;
 
-    justify-content: space-between;
-    gap: 48px;
-    text-align: justify;
-    margin: 10rem auto;
+	justify-content: space-between;
+	gap: 48px;
+	text-align: justify;
+	margin: 10rem auto;
 }
 .about {
-    display: flex;
-    align-items: center;
-    text-align: justify;
+	display: flex;
+	align-items: center;
+	text-align: justify;
 }
 .about-header {
-    font-size: calc(2rem + 2vw);
-    justify-content: center;
-    flex-direction: column;
-    flex-basis: 300px;
-    flex-grow: 1;
+	font-size: calc(2rem + 2vw);
+	justify-content: center;
+	flex-direction: column;
+	flex-basis: 300px;
+	flex-grow: 1;
 }
 .about-content {
-    font-size: calc(0.9rem + 0.45vw);
-    justify-content: center;
-    flex-direction: column;
+	font-size: calc(0.9rem + 0.45vw);
+	justify-content: center;
+	flex-direction: column;
 
-    gap: 48px;
-    flex-basis: 400px;
-    flex-grow: 4;
+	gap: 48px;
+	flex-basis: 400px;
+	flex-grow: 4;
 }
 .main-section-3 {
-    align-items: center;
-    scroll-margin-top: -8em;
+	align-items: center;
+	scroll-margin-top: -8em;
+    background-color: #16182d;
 }
 .cta-container {
-    box-sizing: content-box;
-    display: flex;
-    align-items: center;
-    width: 80%;
-    justify-content: center;
-    gap: 48px;
-    background-color: #3882f6;
-    color: white;
-    padding: clamp(1em, 6.7vw, 5em) clamp(0.5em, 4vw, 3.5em);
-    flex-direction: column;
-
-    border-radius: 10px;
-    margin: 10em auto;
-    flex-wrap: wrap;
-}
-.cta-button {
-    background-color: #3882f6;
-    color: white;
-    border: 0;
-    padding: 16px 24px 16px 24px;
+	box-sizing: content-box;
+	display: flex;
     
-    font-weight: 700;
-    font-size: 18px;
-    flex-grow: 1;
-    border-radius: 10px;
-    border: white 4px solid;
+	flex-basis: 21%;
+
+	height: 500px;
+	background-color: #1f2937;
+	color: white;
+	padding: clamp(1em, 1.5vw, 5em) clamp(0.5em, 1.5vw, 3.5em);
+
+	border-radius: 6px;
+	margin: 6em auto;
+	flex-wrap: wrap;
 }
-.cta-content-container {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 350px;
-    flex-grow: 3;
-    gap: 12px;
-}
+
 .cta-content-text-1 {
-    display: flex;
-    font-size: calc(1.5rem + 0.5vw);
-    font-weight: 400;
-    font-style: italic;
-    text-align: center;
-    justify-content: center;
-}
-.cta-content-text-2 {
-    display: flex;
-    font-size: calc(0.8rem + 0.4vw);
-    font-weight: 200;
-    text-align: center;
-    justify-content: center;
-}
-.cta-button-container {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 300px;
-}
-.form-container{
-    display: flex;
-    flex-direction: column;
-}
-.pageclip-form{
-    display: flex;
-    flex-direction: column;
-    align-content: stretch;
-    align-items: stretch;
-    gap: 1.5vw;
-}
-.form-item{
-    display: flex;
-    font-size: calc(1rem + 0.4vw);
-    font-weight: 200;
-    border: black 1px solid;
-    justify-content: start;
-    font-size: clamp(1em, 1.5vw, 3em);
-    border-radius: 1vw;
-    padding-left: 0.5vw;
-}
-.form-subject{
-    width:  100%;
-    
-    height: 20vh;
-    align-self: center;
-    align-items: start;
-    justify-content: start;
-    align-content: start;
-    font-size: clamp(1em, 1.5vw, 3em);
-}
-.form-button{
-    background-color: #3882f6;
-    color: white;
-    border: 0;
-    padding: 16px 24px 16px 24px;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 18px;
-    justify-content: center;
-    border-radius: 10px;
-    border: white 4px solid;
-}
-.form-label{
-    font-weight: 700;
-    font-size: calc(0.6rem + 1vw);
-    border: white 2px solid;
-}
-#fmail,#fsubject,#fname{
-    margin-bottom: clamp(1em, 3vw, 3em);
-}
-.footer {
-    display: flex;
-    background-color: #1f2937;
-    color: white;
-    justify-content: center;
+	display: flex;
+	font-size: calc(0.8rem + 0.5vw);
 
-    padding-top: clamp(1rem, 1.667vw, 2rem);
-    padding-bottom: clamp(1rem, 1.667vw, 2rem);
+	height: 10%;
+	font-family: "Ubuntu", serif;
+	font-weight: bold;
+	width: 100%;
+}
+.form-container {
+	display: flex;
+	flex-direction: column;
+	height: 90%;
+	width: 100%;
+}
+.form-section {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	width: 100%;
+}
+
+.form-division {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+}
+
+.form-buton {
+	flex-grow: 0;
+	font-family: "Ubuntu", serif;
+	font-size: medium;
+	width: 40%;
+	background-color: #3b82f6;
+	color: #f3f8ff;
+	padding: 8px;
+	border: none;
+	border-radius: 4px;
+}
+.form-label {
+	font-family: "Ubuntu", serif;
+	font-weight: 500;
+	color: #cbcfd5;
+	margin-bottom: 6px;
+}
+.form-input {
+	width: 100%;
+	background-color: #444e5e;
+	border: 1px white solid;
+	border-radius: 6px;
+	color: white;
+
+	font-size: medium;
+	padding: 8px;
+}
+.form-input::placeholder,
+.form-input-textarea {
+	color: #949ca8;
+}
+
+.form-mesaj {
+	height: 0;
+    min-height: 0;
+    flex-grow: 5;
+}
+.form-input-textarea {
+	background-color: #444e5e;
+	border: 1px white solid;
+	border-radius: 8px;
+	color: white;
+	padding: 8px;
+	margin-bottom: 24px;
+    min-width: 100%;
+    max-width: 30vw;
+    min-height: 40%;
+    height: 100%;
+   
+
+}
+
+.footer {
+	display: flex;
+	background-color: #1f2937;
+	color: white;
+	justify-content: center;
+
+	padding-top: clamp(1rem, 1.667vw, 2rem);
+	padding-bottom: clamp(1rem, 1.667vw, 2rem);
 }
 @media (max-width: 848px) {
-    .header-hero {
-        justify-content: center;
-        align-items: center;
-        gap: 72px;
-    }
-    .header-bar{
-        gap: 1vh;
-        margin-top: 1vh;
-  margin-bottom: 1vh;
-    }
-    .header-bar-logo img{
-        min-width: 6vw;
-        margin-left: 0px;
-    }
-    .header-bar-logo{
-        font-size: 3vw;
-    }
-    .header-bar-nav {
-        
-        gap:3vw;
-    }
-    .header-bar-nav a{
-        font-size: 3vw;
-        
-    }
-    .header-hero-content {
-        align-items: center;
-        gap: 36px;
-        text-align: center;
-    }
-    .header-hero-image-container {
-        min-width: unset;
-        flex-basis: 70%;
-    }
+	.header-hero {
+		justify-content: center;
+		align-items: center;
+		gap: 72px;
+	}
+	.header-bar {
+		gap: 1vh;
+		margin-top: 1vh;
+		margin-bottom: 1vh;
+	}
+	.header-bar-logo img {
+		min-width: 6vw;
+		margin-left: 0px;
+	}
+	.header-bar-logo {
+		font-size: 3vw;
+	}
+	.header-bar-nav {
+		gap: 3vw;
+	}
+	.header-bar-nav a {
+		font-size: 3vw;
+	}
+	.header-hero-content {
+		align-items: center;
+		gap: 36px;
+		text-align: center;
+	}
+	.header-hero-image-container {
+		min-width: unset;
+		flex-basis: 70%;
+	}
 }
 @media (max-width: 1526px) {
-    .boxes .box {
-        flex-basis: calc(33.33333% - 66.66666px);
-    }
+	.boxes .box {
+		flex-basis: calc(33.33333% - 66.66666px);
+	}
 }
 
 @media (max-width: 1109px) {
-    .boxes .box {
-        flex-basis: calc(50% - 50px);
-    }
+	.boxes .box {
+		flex-basis: calc(50% - 50px);
+	}
 }
 
 @media (max-width: 691px) {
-    .boxes .box {
-        flex-basis: calc(100%);
-    }
+	.boxes .box {
+		flex-basis: calc(100%);
+	}
 }
