--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ main {
 	background-color: #cbcfd5;
 	gap: 2em;
 }
+#main-section-1{
+	scroll-margin-top: 90px;
+}
 .boxes {
 	display: flex;
 	overflow: hidden;
