--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ main {
 }
 
 .main-section-2 {
-	background-color: #778da9;
+	background-color: #e0e1dd;
 }
 
 .about-container {
@@ -310,7 +310,7 @@ main {
 .main-section-3 {
 	align-items: center;
 	scroll-margin-top: 0;
-	background-color: #415a77;
+	background-color: #cbcfd5;
 }
 .cta-container {
 	box-sizing: content-box;
